--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "react-scripts": "2.1.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
