--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-phone-input-2": "^2.6.1",
+    "react-phone-number-input": "^2.2.17",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
